<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_detail_pokemon"
            android:layout_width="@dimen/image_profile_width"
            android:layout_height="@dimen/image_profile_height"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/layout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_pokemon"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/item_space_margin"
            android:layout_marginBottom="@dimen/item_space_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:textSize="@dimen/item_text_size_caption"
                android:layout_height="wrap_content"
                android:text="@string/id"/>

        <TextView
                android:id="@+id/tv_detail_pokemonid"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="0dp"
                android:textSize="@dimen/item_text_size_caption"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

        <TextView
                android:id="@+id/tv_detail_pokemonname"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <TableLayout
            android:id="@+id/layout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout01"
            android:layout_marginTop="@dimen/item_space_margin"
            android:layout_marginBottom="@dimen/item_space_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:stretchColumns="0,1">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_span="2"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_text_size_caption"
                    android:text="@string/table_stats"
                    android:gravity="left"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/hp"/>

            <TextView
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonhp"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/attack"/>

            <TextView
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonattack"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/defense"/>

            <TextView
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemondefense"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/special_attack"/>

            <TextView
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonspattack"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/special_defense"/>

            <TextView
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonspdefense"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/speed"/>

            <TextView
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonspeed"
                    android:text=""/>
        </TableRow>

    </TableLayout>

    <TableLayout
            android:id="@+id/layout03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout02"
            android:layout_marginTop="@dimen/item_space_margin"
            android:layout_marginBottom="@dimen/item_space_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:stretchColumns="*">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_span="2"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_text_size_caption"
                    android:text="@string/table_abilities"
                    android:gravity="left"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/name_01"/>

            <TextView
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonabi01_name"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/desc_01"/>

            <TextView
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonabi01_desc"
                    android:layout_weight="1"
                    android:maxLines="4"
                    android:lines="4"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/name_02"/>

            <TextView
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonabi02_name"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/desc_02"/>

            <TextView
                    android:layout_width="match_parent"
                    android:lines="4"
                    android:maxLines="4"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemonabi02_desc"
                    android:text=""/>
        </TableRow>

    </TableLayout>

    <TableLayout
            android:id="@+id/layout04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout03"
            android:layout_marginTop="@dimen/item_space_margin"
            android:layout_marginBottom="@dimen/item_space_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:stretchColumns="0,1">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_span="2"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_text_size_caption"
                    android:text="@string/table_types"
                    android:gravity="left"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/type_01"/>

            <TextView
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemontype01"
                    android:text=""/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:text="@string/type_02"/>

            <TextView
                    android:gravity="end"
                    android:id="@+id/tv_detail_pokemontype02"
                    android:text=""/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>